k8s/prod/resources.yaml
---
# API Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: civitas-api-prod
  namespace: civitas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: civitas-api-prod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: civitas-api-prod
    spec:
      containers:
        - name: civitas
          image: gcr.io/project-id/civitas
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 500m
              memory: 2Gi
          command: ["/bin/bash", "/app/api-entrypoint.sh"]
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always

---
# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: civitas-api-prod
  name: civitas-api-prod
  namespace: civitas
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: civitas-api-prod

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: civitas-api-prod
  namespace: civitas
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.civitas.rio
      secretName: civitas-api-prod-tls
  rules:
    - host: api.civitas.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: civitas-api-prod
                port:
                  number: 80
